# Last-Night-an-AI-Saved-My-Life

./: .gitignore  AI_DJ_MCP_SERVER_OVERVIEW.md  CONTEXT.md  Detailed_Music_List.md  LAYER_3_COMPLETE.md  LAYER_4_COMPLETE.md  README.md
.claude/: napkin.md
ai-dj-mcp-server/: INSTALLATION.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  USAGE_EXAMPLES.md  pyproject.toml  requirements.txt  test_track_analysis.py
ai-dj-mcp-server/src/ai_dj_mcp/: __init__.py  __main__.py  cue_detector.py  server.py  track.py
mixxx-controller/: AI_DJ_Controller.js  AI_DJ_Controller.midi.xml  INSTALLATION.md  README.md  playlist_loader.py
track-selection-engine/: README.md  WORKFLOW_GUIDE.md  import_detailed_list.py  pyproject.toml  requirements.txt  setup.py  track-selector
track-selection-engine/src/track_selector/: __init__.py  cli.py  journey_planner.py  library.py  models.py
traktor-automation/: INTELLIGENT_MIXING.md  README.md  TRAKTOR_MIDI_MAPPING_GUIDE.md  intelligent_dj.py  mix_plan_parser.py  test_eq_mapping.py  traktor_ai_dj.py  verify_all_three_devices.py  verify_hardware_setup.py
traktor-automation/analysis-tools/: README.md
traktor-automation/analysis-tools/docs/: hybrid-integration.md  stripes-analysis.md  stripes-discovery-summary.md  traktor-analysis-files-summary.md  transients-exploration.md
traktor-automation/analysis-tools/scripts/: analyze_stripes.py  analyze_transients.py  analyze_transients_v2.py  analyze_transients_v3.py  hybrid_analyzer.py  stripes_to_cuepoints.py
traktor-automation/data/: lucidflow_mix_plan.txt
