[project]
name = "ai-dj-mcp-server"
version = "0.1.0"
description = "MCP server for AI-powered DJ mixing with cue point detection, BPM analysis, and automated mix generation"
authors = [{name = "Dan Taylor"}]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "mcp>=1.0.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.1",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "torch>=2.2.0",
    "scikit-learn>=1.2.0",
    "pydub>=0.25.1",
    "joblib>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_backend"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
