[project]
name = "track-selection-engine"
version = "0.1.0"
description = "Intelligent track selection engine for deep space house DJ sets using journey arc philosophy"
authors = [{name = "Dan Taylor"}]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0",
    "musicbrainzngs>=0.7.1",
    "mutagen>=1.47.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
track-selector = "track_selector.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_backend"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
